--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@reduxjs/toolkit": "^2.2.7",
+    "animate.css": "^4.1.1",
     "firebase": "^10.13.1",
     "firestore": "^1.1.6",
     "formik": "^2.4.6",
@@ -18,6 +19,8 @@
     "react-dom": "^18.2.0",
     "react-redux": "^9.1.2",
     "react-router-dom": "^6.26.1",
+    "sweetalert2": "^11.13.1",
+    "sweetalert2-react-content": "^5.0.7",
     "yup": "^1.4.0"
   },
   "devDependencies": {
